--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "name": "node-mailer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Example node mailer using gmail account",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "khamdan",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "nodemailer": "^2.4.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Khamdan/node-mailer-gmail-example.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Khamdan/node-mailer-gmail-example/issues"
+  },
+  "homepage": "https://github.com/Khamdan/node-mailer-gmail-example#readme"
 }
